--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   path_provider: ^2.0.15
   dio: ^5.2.1+1
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   test: any
