--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   path_provider: ^2.0.15
   dio: ^5.2.1+1
   flutter_staggered_grid_view: ^0.6.2
+  intl: ^0.18.1
 
 dev_dependencies:
   test: any
