--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.2.1+1
   flutter_staggered_grid_view: ^0.6.2
   intl: ^0.18.1
+  camera: ^0.10.5+2
 
 dev_dependencies:
   test: any
